<package format="3">
    <name>imgui_rosmon</name>
    <description>rosmon plugin for imgui_ros</description>
    <version>0.0.1</version>
    <license>MIT</license>
    <maintainer email="max.schwarz@ais.uni-bonn.de">Max Schwarz</maintainer>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>imgui_ros</depend>
    <depend>rosmon_msgs</depend>
    <depend>rosfmt</depend>

    <export>
        <imgui_ros plugin="${prefix}/imgui_plugins.xml" />
    </export>
</package>
